<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:orientation="vertical"
	tools:context=".activities.Activity1">
	
	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBarLayoutActivity1"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize">
		
		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbarActivity1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:navigationIcon="?attr/homeAsUpIndicator"
			app:title="@string/title_activity_1">
		
		</androidx.appcompat.widget.Toolbar>
	
	</com.google.android.material.appbar.AppBarLayout>
	
	<Button
		android:id="@+id/buttonGoto4From1"
		style="@style/ButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="16dp"
		android:text="@string/goto_activity_4_from_1" />
	
	<Button
		android:id="@+id/buttonGoto2From1"
		style="@style/ButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="16dp"
		android:text="@string/goto_activity_2_from_1" />
	
	<Button
		android:id="@+id/buttonGoto6From1"
		style="@style/ButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="16dp"
		android:text="@string/goto_activity_6_from_1" />

</LinearLayout>