<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Activity3"
        android:id="@+id/linearLayoutActivity3"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutActivity3"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarActivity3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:title="@string/title_activity_3">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGoto1From3"
            android:text="@string/goto_activity_1_from_3"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            style="@style/ButtonStyle"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGoto5From3"
            android:text="@string/goto_activity_5_from_3"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            style="@style/ButtonStyle"/>

</LinearLayout>