<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true">
	
	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBarLayoutServices"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fitsSystemWindows="true"
		app:expanded="true"
		app:statusBarScrim="@android:color/transparent">
		
		<com.google.android.material.appbar.CollapsingToolbarLayout
			android:id="@+id/collapsingToolbarServices"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fitsSystemWindows="true"
			app:layout_scrollFlags="scroll|exitUntilCollapsed"
			app:statusBarScrim="@android:color/transparent"
			app:titleEnabled="false">
			
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fitsSystemWindows="true"
				app:layout_collapseMode="parallax"
				app:layout_collapseParallaxMultiplier="0.9">
				
				<ImageView
					android:id="@+id/imageViewToolbarBackground"
					android:layout_width="match_parent"
					android:layout_height="250dp"
					android:background="@color/colorPaleGrey"
					android:scaleType="fitCenter" />
				
				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/textViewToolbarBackground"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal|bottom"
					android:layout_marginStart="50dp"
					android:layout_marginEnd="50dp"
					android:layout_marginBottom="40dp"
					android:drawablePadding="14dp"
					android:gravity="center"
					android:text="@string/toolbar_text"
					android:textColor="@color/colorPaleGrey"
					app:drawableTopCompat="@drawable/ic_logo_small" />
			
			</FrameLayout>
			
			<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:fitsSystemWindows="false"
				app:layout_collapseMode="pin"
				app:title="@string/services_title"
				app:titleTextColor="@color/colorPaleGrey" />
		
		</com.google.android.material.appbar.CollapsingToolbarLayout>
	
	</com.google.android.material.appbar.AppBarLayout>
	
	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			
			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/constraintLayoutServices"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?attr/selectableItemBackground">
				
				<TextView
					android:id="@+id/textViewServices"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="16dp"
					android:layout_marginEnd="8dp"
					android:text="@string/services_header"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toStartOf="@+id/textViewServicesAll"
					app:layout_constraintHorizontal_chainStyle="spread_inside"
					app:layout_constraintHorizontal_bias="0"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
				
				<TextView
					android:id="@+id/textViewServicesAll"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="16dp"
					android:layout_marginEnd="8dp"
					android:text="@string/services_all"
					android:textColor="@color/colorPrimary"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintHorizontal_bias="1"
					app:layout_constraintStart_toEndOf="@+id/textViewServices"
					app:layout_constraintTop_toTopOf="parent" />
			
			
			</androidx.constraintlayout.widget.ConstraintLayout>
			
			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				app:cardCornerRadius="4dp">
				
				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/colorPaleGrey">
					
					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textViewAddService"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="?attr/selectableItemBackground"
						android:drawablePadding="14dp"
						android:fontFamily="sans-serif-medium"
						android:gravity="center_vertical|start"
						android:padding="16dp"
						android:text="@string/add_service"
						android:textSize="16sp"
						android:textStyle="normal"
						app:drawableLeftCompat="@drawable/ic_partnership" />
				</FrameLayout>
			</androidx.cardview.widget.CardView>
			
			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/recyclerViewServices"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorPaleGrey"
				android:orientation="vertical">
				
				<LinearLayout
					android:id="@+id/viewPagerLinearLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="?attr/selectableItemBackground"
					android:orientation="vertical">
					
					<androidx.viewpager.widget.ViewPager
						android:id="@+id/viewPager"
						android:layout_width="match_parent"
						android:layout_height="200dp" />
					
					<LinearLayout
						android:id="@+id/linearLayoutSliderDots"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="bottom"
						android:layout_margin="16dp"
						android:gravity="center"
						android:orientation="horizontal" />
				</LinearLayout>
			
			
			</LinearLayout>
		
		</LinearLayout>
	
	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>